# aegis

./: .gitignore  AGENTS.md  Cargo.toml
.cupola-app/Cupola/: db.sqlite  db.sqlite-shm  db.sqlite-wal
.cupola-app/Cupola/vaults/75139336-4580-472a-8c8b-b7e00a4684d2/indexes/tantivy/: .managed.json  meta.json
data/packs/dfir/: controls.json  pack_meta.json  queries.json  rubric.json
data/packs/iso_27001/: controls.json  pack_meta.json  queries.json  rubric.json
data/packs/nist_csf/: controls.json  pack_meta.json  queries.json  rubric.json
data/packs/soc_2/: controls.json  pack_meta.json  queries.json  rubric.json
data/packs/vendor_security/: controls.json  pack_meta.json  queries.json  rubric.json
src/: main.rs
